# SpaceTitanic

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
api/: Dockerfile  fast.py
app/: main.py  requirements.txt
data/: raw_data.csv
models/: preprocessor  titanic_pipeline.joblib
notebooks/: brouillon.ipynb
src/titanic/: data.py  main.py  model.py  params.py  registry.py
src/titanic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
