[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic"
version = "0.1.0"
description = "A package for the Space Titanic project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
